refactor para criar uma api tipo spotify
